
2016-09-06  Dave Pitts <dpitts@cozx.com>

	* cobc.c: Changed the pline array to an array of pointers.
	  The lines are allocated and the allocation limits are checked.
	  If the the CB_READ_AHEAD is exceeded an abort is issued.
	* cobc.h: Increase CB_READ_AHEAD to 800.

2016-09-05  Edward Hart <edward.dan.hart@gmail.com>

	* cobc.c, cobc.h: delete references to cobc_init_scanner, which was
	  deleted in [r1100].

2016-09-04  Edward Hart <edward.dan.hart@gmail.com>

	* tree.c, scanner.l: replaced code parsing constant-names in PICTURE
          strings with new implementation containing more checks.

2016-09-03  Edward Hart <edward.dan.hart@gmail.com>

	* pplex.l, ppparse.y, cobc.c: added support for Micro Focus' variable
	  format.
	* config.def: added variable-format option.
	* cobc.h: moved CB_FORMAT defines into new cb_format enum.

2016-09-03  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* tree.c (cb_concat_literals): allow concatenation of national and
	  boolean literals

2016-09-02  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.h: added CB_UNFINISHED as replacement for CB_PENDING for code that
	  compiles and "works somehow" (not necessarily according to specs)
	* cobc.c, cobc.h, warning.def: CB_ONWARNDEF for warnings that default to on
	* cobc.c. cobc.h, warning.def: new warning option "unfinished"
	  (defaults to on) - don't warn if unfinished features are used
	* tree.c, parser.y: marking "USAGE NATIONAL" and
	  "parameters passed by VALUE" as UNFINISHED instead of PENDING
	* parser.y: added more checks and pending messages to CURRENCY SIGN with
	  and without PICTURE SYMBOL

2016-09-02  Edward Hart <edward.dan.hart@gmail.com>

	* codegen.c (codegen, output_entry_function): modularised and shortened
	  code.

2016-09-01  Edward Hart <edward.dan.hart@gmail.com>

	* field.c (validate_field_1), parser.y (sign_clause): fixed bug #305 by
	  adding checks that elementary item with SIGN has S in PIC and is USAGE