@@ -1,5 +1,5 @@
 .\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.44.1.
-.TH COBCRUN "1" "August 2016" "cobcrun (GnuCOBOL) 2.0.0" "User Commands"
+.TH COBCRUN "1" "September 2016" "cobcrun (GnuCOBOL) 2.0.0" "User Commands"
 .SH NAME
 cobcrun \- manual page for cobcrun (GnuCOBOL) 2.0.0
 .SH SYNOPSIS
@@ -36,7 +36,7 @@ and any basename to the module preload list
 (COB_LIBRARY_PATH and/or COB_PRELOAD)
 .SH AUTHOR
 Written by Roger While, Simon Sobisch, Brian Tiffin
-Built     Aug 14 2016 12:54:57
+Built     Sep 05 2016 16:36:14
 Packaged  Oct 25 2015 21:40:28 UTC
 .PP
 libcob (GnuCOBOL) 2.0.0
@@ -46,7 +46,7 @@ This is free software; see the source for copying conditions.  There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 .PP
 Written by Keisuke Nishida, Roger While, Ron Norman, Simon Sobisch, Edward Hart
-Built     Aug 14 2016 12:53:19
+Built     Sep 05 2016 16:35:35
 Packaged  Oct 25 2015 21:40:28 UTC
 .SH "REPORTING BUGS"
 Report bugs to: bug\-gnucobol@gnu.org
