@@ -419,7 +419,7 @@ word to be added to reserved words list
 \fB\-freserved=\fR<word>:<alias> word to be added to reserved words list as alias
 .SH AUTHOR
 Written by Keisuke Nishida, Roger While, Ron Norman, Simon Sobisch, Edward Hart
-Built     Sep 06 2016 11:39:22
+Built     Sep 06 2016 14:07:11
 Packaged  Oct 25 2015 21:40:28 UTC
 C version "4.8.3 20140911 (Red Hat 4.8.3\-7)"
 .SH "REPORTING BUGS"
